<resources>
    <string name="app_name">FitMotion</string>
    <string name="welcome_description">Get ready for personalized recommendations to optimize your health and elevate your lifestyle</string>
    <string name="welcome_title">Welcome to FitMotion</string>
    <string name="welcome_logo_text">FitMotion</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="username_display">Username</string>
    <string name="friends_display">Friends</string>
    <string name="achievement_display">Achievement</string>
    <string name="edit">Edit</string>

    <string name="screening_title">Your current condition"</string>
    <string name="screening_desc">we need your current information to \ndetermine the training method</string>
    <string name="weight_title">Weight (Kg)</string>
    <string name="height_title">Height (Cm)</string>
    <string name="gender_title">Gender</string>
    <string name="dob_title">Date of Birth</string>
    <string name="title_commitment">What\'s your daily activity commitment?</string>

    <string name="home_nav">Home</string>
    <string name="achieve_nav">Milestone</string>
    <string name="sensor_nav">Sensor</string>
    <string name="friends_nav">Friends</string>
    <string name="profile_nav">Profile</string>

    <string name="logout_message">Are you sure want to logout?</string>
    <string name="yes_message">Yes</string>
    <string name="no_message">No</string>

    <string name="title_alert">Sensor Positioning Information</string>
    <string name="alert_content">To ensure accurate sensor readings, place your device near your body. preferably in the front pocket of your pants.</string>

    <string name="runner">Run 3 Km</string>
    <string name="marathon">Run 20 Km</string>
    <string name="achilles">Run 5 Km</string>
    <string name="pedestrian">Walk 1 Km</string>
    <string name="adventurer">Walk 5 Km</string>
    <string name="journey_man">Walk 10 Km</string>
    <string name="triple">Run 30 minutes for 3 days</string>
    <string name="halfmoon">Run 30 minutes for 2 weeks</string>
    <string name="fullmoon">Run 30 minutes for 1 month</string>
    <string name="nailed_it">Run 30 minutes for 3 months</string>
    <string name="go_beyond">Run 30 minutes for 6 months</string>
    <string name="to_infinity">Run 30 minutes for 1 years</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="commitment">
        <item>5 min / day</item>
        <item>10 min / day</item>
        <item>15 min / day</item>
        <item>30 min / day</item>
        <item>45 min / day</item>
        <item>60 min / day</item>
        <item>90 min / day</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>