<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:src="@drawable/ic_warning"/>

        <TextView
            android:id="@+id/tv_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/logout_message"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes_message"
                android:layout_margin="8dp"
                android:background="@drawable/border_login"
                app:backgroundTint="@color/primary"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_semibold"/>

            <Button
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_message"
                android:background="@drawable/border_signup"
                app:backgroundTint="@color/black"
                android:layout_margin="8dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_semibold"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>