<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toStartOf="@+id/logoname"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical2"/>

    <TextView
        android:id="@+id/logoname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_logo_text"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal2"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
        android:fontFamily="@font/montserrat_extrabold"
        app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"/>

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome_image"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical3"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical4"/>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/welcome_desc"
        app:layout_constraintTop_toBottomOf="@id/welcome_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/welcome_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/welcome_description"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical5"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical6"
        android:fontFamily="@font/montserrat_regular"/>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_login"
        app:backgroundTint="@color/primary"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintEnd_toStartOf="@id/guidelineVertical7"
        app:layout_constraintTop_toBottomOf="@+id/welcome_desc"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical3"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@drawable/border_signup"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        android:text="@string/sign_up"
        app:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintStart_toEndOf="@id/guidelineVertical8"
        app:layout_constraintTop_toBottomOf="@id/welcome_desc"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.05"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical3"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.05"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical4"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.95"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical5"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical6"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical7"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.48"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical8"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.52"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>